OUR WORK: Prevent horizontal scrolling

--- a/wp-content/themes/twentythirteen-child/assets/style/style.css
+++ b/wp-content/themes/twentythirteen-child/assets/style/style.css
@@ -1927,7 +1927,7 @@ button {
   display: -ms-inline-flexbox;
   display: inline-flex;
   width: 100%;
-  margin: 30px 5px 30px 5px;
+  margin: 30px 0px;
   cursor: pointer;
   text-align: center;
 }
